--- a/src/Core.Infra.IoC/Core.Infra.IoC.csproj
+++ b/src/Core.Infra.IoC/Core.Infra.IoC.csproj
@@ -14,7 +14,7 @@
     <ProjectReference Include="..\Crawler.Domain\Crawlers.Domains.csproj" />
     <ProjectReference Include="..\Crawlers.Application\Crawlers.Application.csproj" />
     <ProjectReference Include="..\Crawlers.Infra.WebScrapperServices\Crawlers.Infra.WebScrapperServices.csproj" />
-    <ProjectReference Include="..\Infra.Databases\Crawler.Infra.Databases.csproj" />
+    <ProjectReference Include="..\Infra.Databases\Crawlers.Infra.Databases.csproj" />
     <ProjectReference Include="..\Mockers.Contexts.Crawlers.Infra.Services\Mockers.Contexts.Crawlers.Infra.Services.csproj" />
   </ItemGroup>
 
